meecast (0.6.4) unstable; urgency=low

  * Fixed segmentation fault  

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 27 Sep 2012 14:42:23 +0200

meecast (0.6.3) unstable; urgency=low

  * Fixed bug that crashed Meecast with nil config on launch  

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 27 Sep 2012 14:42:23 +0200

meecast (0.6.2) unstable; urgency=low

  * Updated Finish, Dutch, Portuguese, Turkish, Vietnamese translations
  * Added icons for hko.gov.hk
  * Added dbus method GetCurrentWeather to applet. For Lockscreen application
  * Removed Adelaide, Brisbane, Cairns, Canberra, Darwin, Hobart, Newcastle,
    Perth and Sydney from the Victoria entry in the bom.gov.au source.
  * Added Map of Weather for weather.com source
  * Added Catalan translation. Thanks Agustí Clara

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 26 Sep 2012 22:42:23 +0200

meecast (0.6.1) unstable; urgency=low

  * Added icons for hko.gov.hk
  * Fixed problem with "Daily" and "15 minutes" updatings
  * Fixed problem with splash's setting
  * Added Contextkit for Billboard compatibility 
  * Added item "12 hours" to Update period list
  * Added new icon pack "SimpelMee". Thanks Kim Venetvirta for this work 
  * Added setting for color of font in temperature on standby screen 
  * Added Portuguese translation. Thanks Jose Narciso
  * Added Turkish translation. Thanks Burak Kaan Kose
  * Added Vietnamese translation. Thanks Hieu Nguyen, Anh Dương and truongnx
  * Updated Bulgarian, Dutch, Finish, Polish translations

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 05 Sep 2012 10:42:23 +0200

meecast (0.6) unstable; urgency=low

  * Fixed problem with GPS 
  * Fixed problem with green color for font in standby settings
  * Added items "15 minutues" and "One day" to Update period list
  * Added setting for Splash screen
  * Fixed problem with temperature in current day
  * Fixed problem with showing weather forecast for current day and next day

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 28 Jul 2012 00:42:23 +0200
